<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:layout_behavior="@string/appbar_scrolling_view_behavior"
		tools:showIn="@layout/activity_note"
		tools:context=".presentation.features.NoteActivity">
	<Spinner
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:id="@+id/spinner_courses"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginEnd="16dp"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="16dp"
			app:layout_constraintHorizontal_bias="0.0"
			android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txt_note_title"
	/>
	<EditText
			android:id="@+id/txt_note_title"
			android:layout_marginTop="16dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textMultiLine"
			android:gravity="start|top"
			android:ems="10"
			app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
			app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
			android:hint="@string/note_title"
			app:layout_constraintStart_toStartOf="parent"
			android:autofillHints="@string/note_title" tools:targetApi="o"/>
	<EditText
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:inputType="textMultiLine"
			android:gravity="start|top"
			android:ems="10"
			android:id="@+id/txt_note_body"
			android:hint="@string/note"
			android:layout_marginBottom="8dp"
			app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
			app:layout_constraintTop_toBottomOf="@+id/spinner_courses" app:layout_constraintVertical_bias="0.0"
			app:layout_constraintEnd_toEndOf="@+id/spinner_courses"
			app:layout_constraintStart_toStartOf="@+id/spinner_courses"
			android:autofillHints="@string/note" tools:targetApi="o"/>


</androidx.constraintlayout.widget.ConstraintLayout>