<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:id="@+id/drawer_layout"
		android:fitsSystemWindows="true"
		tools:openDrawer="start">
	<include layout="@layout/activity_note_list"
	         android:layout_height="match_parent"
	         android:layout_width="match_parent"/>

	<com.google.android.material.navigation.NavigationView
			android:id="@+id/nav_view"
			android:layout_gravity="start"
			android:fitsSystemWindows="true"
			app:menu="@menu/activity_main_drawer"
			app:headerLayout="@layout/nav_header"
			android:layout_width="wrap_content"
			android:layout_height="match_parent">

	</com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>